--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "babel-watch index.js"
   },
   "author": "Raunak Singha",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "@babel/core": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-watch": "^7.0.0",
     "bcrypt": "^3.0.6",
     "express": "^4.17.1",
